--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h1>Hi! I'm <b>Ian</b>, and I am a</h1>
             </div>
             <div class="presentation-role">
-                <h2 id="role-text">Data Migration Consultant</h2>
+                <h2 id="role-text"></h2>
             </div>
             <div class="icon-container">
                 <a class="social linkedin" href="https://www.linkedin.com/in/ianfrossi/" target="_blank"></a>
