--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="style.js"></script>
-    <title>Test Webpage</title>
+    <title>Presentation</title>
 </head>
 
 <body>
