--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="style.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     <title>Presentation</title>
 </head>
 
